--- a/CRUDADOnetProject/Views/ADOnet/ADOIndex.cshtml
+++ b/CRUDADOnetProject/Views/ADOnet/ADOIndex.cshtml
@@ -29,7 +29,7 @@
 
 </script>
 
-
+/*jrfgfejgjfgfncgncgfd */
 <div class="col-lg-6">
     <center>
         <div class="table table-striped" style="background: linear-gradient( #fff, #ccc );">
