--- a/CRUDADOnetProject/Views/ADOnet/ADOIndex.cshtml
+++ b/CRUDADOnetProject/Views/ADOnet/ADOIndex.cshtml
@@ -4,11 +4,11 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>ADOIndex</h2>
-
-
 <script src="~/Scripts/jquery-3.4.1.min.js"></script>
 <script src="~/Content/Pages/ADO.js"></script>
+
+<h2>ADOIndex</h2>
+
 <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
 <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.css" />
 <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.js"></script>
@@ -26,37 +26,48 @@
 
     });
 
-    sakshi is a good girl.
-
 
 </script>
 
-/*jrfgfejgjfgfncgncgfd */
 <div class="col-lg-6">
     <center>
         <div class="table table-striped" style="background: linear-gradient( #fff, #ccc );">
 
-            <input type="hidden" id="hdnEmpId" />
+            <input type="hidden" id="hdnESaveEmployeempId" />
             <label>Name</label>
             <input type="text" id="txtName" class="form-control" />
             <br />
             <label>Email</label>
             <input type="text" id="txtEmail" class="form-control" />
             <br />
+            <label>Password</label>
+            <input type="password" id="passward" class="form-control" />
+            <br />
             <label>Address</label>
             <input type="text" id="txtAddress" class="form-control" />
             <br />
             <label>Mobile No</label>
-            <input type="text" id="txtMobile" class="form-control" />
+            <input type="number" id="txtMobile" class="form-control" />
             <br />
             <label>State</label><br />
-            <select id="ddlState" class="form-control"></select>
-            <br />
+            <select id="ddlState" class="form-control">
+                <option value="">State</option>&nbsp;
+                <option value="maharashtra">maharashtra</option>&nbsp;
+                <option value="MP">MP</option>&nbsp;
+                <option value="UP">UP</option>&nbsp;
+
+            </select><br /><br />
 
             <label>City</label><br />
-            <select id="ddlCity" class="form-control"></select><br />
+            <select id="ddlCity" class="form-control">
+                <option value="">City</option>&nbsp;
+                <option value="Chandrapur">Chandrapur</option>&nbsp;
+                <option value="Nagpur">Nagpur</option>&nbsp;
+                <option value="Nashik">Nashik</option>&nbsp;
+                <option value="Pune">Pune</option>&nbsp;
+                <option value="Mumbai">Mumbai</option>&nbsp;
+            </select><br /> <br />
 
-            <br />
             <input type="submit" value="Submit" onclick="SaveEmployee()" class="form-control" />
             <br />
             <br />
