--- a/CRUDADOnetProject/Views/ADOnet/ADOIndex.cshtml
+++ b/CRUDADOnetProject/Views/ADOnet/ADOIndex.cshtml
@@ -33,7 +33,7 @@
     <center>
         <div class="table table-striped" style="background: linear-gradient( #fff, #ccc );">
 
-            <input type="hidden" id="hdnESaveEmployeempId" />
+            <input type="hidden" id="hdnid" />
             <label>Name</label>
             <input type="text" id="txtName" class="form-control" />
             <br />
